--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -6,5 +6,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <h1>Azure web app sample</h1>
+    <h1>Azure web app sample - Version 2.0</h1>
 </div>
